<resources>
    <string name="app_name">GetherFit</string>
    <string name="app_name_alias">KLVAD</string>
    <string name="placeholder">Placeholder</string>
    <string name="number">42</string>

    <!-- Content descriptions -->
    <string name="description_settings">Settings</string>
    <string name="description_logout">Logout</string>
    <string name="description_camera">Camera</string>
    <string name="description_gallery">Gallery</string>
    <string name="description_trashcan">Trashcan</string>
    <string name="description_edit">Edit</string>
    <string name="description_share">Share</string>
    <string name="description_dashboard">Dashboard</string>
    <string name="description_exercise">Exercise</string>
    <string name="description_workout">Workout</string>
    <string name="description_close">Close</string>
    <string name="description_search">Search</string>
    <string name="description_no_result">No Result</string>
    <string name="description_random">Random</string>
    <string name="description_new">New</string>
    <string name="description_timer">Timer</string>
    <string name="description_reps">Reps</string>
    <string name="description_weight">Weight</string>
    <string name="description_info">Info</string>
    <string name="description_circle">Circle</string>

    <!-- The image bottom sheet -->
    <string name="bottom_image_title">Add Image</string>
    <string name="bottom_image_camera">From Camera</string>
    <string name="bottom_image_gallery">From Gallery</string>
    <string name="bottom_image_delete">Delete Image</string>
    <string name="bottom_image_delete_image">Delete Current Image</string>
    <string name="bottom_image_gallery_error">Could not access the image!</string>

    <!-- The confirm dialog -->
    <string name="confirm_confirm">Confirm</string>
    <string name="confirm_cancel">Cancel</string>

    <!-- The login screen -->
    <string name="login_description">Everything is better together!</string>
    <string name="login_failed">Log in failed! Try again!</string>
    <string name="login_logout">User logged out!</string>

    <!-- The main screen -->
    <string name="main_home">Home</string>
    <string name="main_space_add">Add Space</string>

    <!-- The edit space screen -->
    <string name="edit_space">Edit Space</string>
    <string name="edit_space_add">Add Space</string>
    <string name="edit_space_confirm">Confirm</string>
    <string name="edit_space_delete">Delete</string>
    <string name="edit_space_delete_description">Are you sure you want to delete this space?</string>
    <string name="edit_space_leave">Leave</string>
    <string name="edit_space_leave_description">Are you sure you want to leave this space?</string>
    <string name="edit_space_name">Name</string>
    <string name="edit_space_name_hint">The Space Name</string>
    <string name="edit_space_name_error">Please provide a name!</string>

    <!-- The overview fragment -->
    <string name="overview">Overview</string>
    <string name="overview_sessions">Sessions</string>
    <string name="overview_exercises">Exercises</string>
    <string name="overview_today">today</string>
    <string name="overview_sessions_per_week">Sessions Per Week</string>
    <string name="overview_sessions_per_month">Sessions Per Month</string>
    <string name="overview_all_sessions_all_months">All Sessions Per Month</string>
    <string name="overview_muscles">Trained Muscle Groups</string>
    <string name="overview_muscles_warning">You need to train at least 3 different muscle groups for this chart to show up! </string>
    <string-array name="periods">
        <item> Last 3 Months </item>
        <item> Last Year </item>
        <item> All Time </item>
    </string-array>
    <string-array name="months">
        <item> Jan </item>
        <item> Feb </item>
        <item> Mar </item>
        <item> Apr </item>
        <item> May </item>
        <item> Jun </item>
        <item> Jul </item>
        <item> Aug </item>
        <item> Sep </item>
        <item> Oct </item>
        <item> Nov </item>
        <item> Dec </item>
    </string-array>

    <!-- The routines fragment -->
    <string name="routines">Routines</string>

    <!-- The training fragment -->
    <string name="training">Training</string>
    <string name="training_exercises">Exercises</string>
    <string name="training_exercises_description">Start or modify single exercises</string>
    <string name="training_workouts">Workouts</string>
    <string name="training_workouts_description">Start or modify workouts</string>
    <string name="training_history">History</string>
    <string name="training_no_exercises">No exercises performed so far!\nQuit playing and start working out!</string>
    <string name="training_single_exercises">Single Exercises</string>
    <string name="training_show_more">Show More</string>

    <!-- The exercise activity -->
    <string name="exercises">Exercises</string>
    <string name="exercises_categories">Categories:</string>
    <string name="exercises_all">All</string>
    <string name="exercises_sort">Sort:</string>
    <string name="exercises_sort_alphabetical">Alphabetical</string>
    <string name="exercises_sort_recent">Recent</string>
    <string name="exercises_sort_least_used">Least Used</string>
    <string name="exercises_sort_random">Random</string>
    <string name="exercises_no_result">No exercise found!</string>

    <!-- The edit exercise screen -->
    <string name="edit_exercise">Edit Exercise</string>
    <string name="edit_exercise_add">Add Exercise</string>
    <string name="edit_exercise_confirm">Confirm</string>
    <string name="edit_exercise_delete">Delete</string>
    <string name="edit_exercise_delete_description">Are you sure you want to delete this exercise?</string>
    <string name="edit_exercise_name">Name</string>
    <string name="edit_exercise_name_hint">The Exercise Name</string>
    <string name="edit_exercise_name_error">Please provide a name!</string>
    <string name="edit_exercise_category">Categories</string>
    <string name="edit_exercise_category_error">Specify at least one category!</string>
    <string name="edit_exercise_other">Other</string>
    <string name="edit_exercise_other_reps">Reps</string>
    <string name="edit_exercise_other_weight">Weight</string>
    <string name="edit_exercise_other_description">Description</string>

    <!-- The perform exercise screen -->
    <string name="perform_exercise_time">Time</string>
    <string name="perform_exercise_time_placeholder">0<small>s</small></string>
    <string name="perform_exercise_total">Total Time</string>
    <string name="perform_exercise_last">Last Done</string>
    <string name="perform_exercise_set">Avg. Set</string>
    <string name="perform_exercise_pause">Avg. Pause</string>
    <string name="perform_exercise_info">Information</string>
    <string name="perform_exercise_info_extended">Exercise Information</string>
    <string name="perform_exercise_change_log">Change Log</string>
    <string name="perform_exercise_next">Next</string>
    <string name="perform_exercise_start">Start</string>
    <string name="perform_exercise_finish">Finish</string>
    <string name="perform_exercise_previous">Back</string>
    <string name="perform_exercise_sets">Sets</string>
    <string name="perform_exercise_reps">Reps</string>
    <string name="perform_exercise_weight">Weight</string>
    <string name="perform_exercise_description">Description</string>
    <string name="perform_exercise_start_description"><b>Prepare!</b>\n\nClick on start if you want to enter the first set!</string>
    <string name="perform_exercise_quit">Quit Exercise</string>
    <string name="perform_exercise_quit_description">Are you sure you want to quit the exercise?</string>
    <string name="perform_exercise_finish_title">Finish Exercise</string>
    <string name="perform_exercise_finish_description">Are you sure you want to finish the exercise?</string>
    <string name="perform_exercise_new">Starting with the exercise</string>
    <string name="perform_exercise_new_description">You never trained this exercise before</string>
    <string name="perform_exercise_new_old">Started with the exercise</string>
    <string name="perform_exercise_new_old_description">You started training this exercise with a weight of %1$s and %2$s reps</string>
    <string name="perform_exercise_change_weight">Changed Weight</string>
    <string name="perform_exercise_change_weight_description">You changed the weight from %1$s to %2$s</string>
    <string name="perform_exercise_change_reps">Changed Reps</string>
    <string name="perform_exercise_change_reps_description">You changed from %1$s to %2$s reps</string>

    <!-- The workout activity -->
    <string name="workouts">Workouts</string>

    <!-- The recipes fragment -->
    <string name="recipes">Recipes</string>

    <!-- The events fragment -->
    <string name="events">Events</string>

    <!-- The settings screen -->
    <string name="settings">Settings</string>
    <string name="settings_account">Account</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_logout_description">Are you sure you want to log out?</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_bottom_bar">Bottom Bar Navigation</string>
    <string name="settings_bottom_bar_description">Show the bottom bar navigation</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_description">Change the application\'s theme</string>
    <string name="settings_theme_normal">Normal</string>
    <string name="settings_theme_klvad">KLVAD</string>
    <string name="settings_personal">Personal View</string>
    <string name="settings_personal_overview">Personal Overview</string>
    <string name="settings_personal_overview_description">Also reflect training data of all spaces in the personal overview</string>
</resources>