<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".space.training.ExerciseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/exercises"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/back_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="12dp"
            android:onClick="closeSearch"
            android:contentDescription="@string/description_close"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filter_input"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/text_input"
            android:layout_width="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintLeft_toRightOf="@id/back_button"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/search_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="12dp"
            android:contentDescription="@string/description_search"
            android:onClick="openSearch"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintRight_toLeftOf="@id/close_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="12dp"
            android:contentDescription="@string/description_settings"
            android:onClick="close"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/toolbar_divider"
            style="@style/horizontal_divider"
            android:layout_marginTop="12dp"
            android:background="?attr/colorPrimaryVariant"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <HorizontalScrollView
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_divider">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercises_categories" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/category_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/exercises_all"
                    style="@style/selected_chip" />

                <LinearLayout
                    android:id="@+id/categories_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbar_divider" />

            </LinearLayout>

        </HorizontalScrollView>

        <View
            android:id="@+id/filter_divider"
            style="@style/horizontal_divider"
            android:background="?attr/colorPrimaryVariant"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categories" />

        <HorizontalScrollView
            android:id="@+id/sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_divider">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercises_sort" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_alphabetical"
                    style="@style/selected_chip"
                    android:onClick="sortAlphabetic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/exercises_sort_alphabetical" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_recent"
                    style="@style/unselected_chip"
                    android:onClick="sortRecent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/chip_spacing"
                    android:text="@string/exercises_sort_recent" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_least_used"
                    style="@style/unselected_chip"
                    android:onClick="sortLeastUsed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/chip_spacing"
                    android:text="@string/exercises_sort_least_used" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_random"
                    style="@style/unselected_chip"
                    android:onClick="sortRandom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/chip_spacing"
                    android:text="@string/exercises_sort_random" />

            </LinearLayout>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exercises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimaryVariant"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/no_result"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:background="?attr/colorPrimaryVariant"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/no_result_image"
            android:layout_margin="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/description_no_result"
            android:src="@drawable/ic_baseline_search_off_24"
            android:layout_width="128dp"
            android:layout_height="128dp"/>

        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/no_result_image"
            android:text="@string/exercises_no_result"
            android:layout_marginTop="8dp"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>