<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_background_primary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            style="@style/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/placeholder" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:gravity="end"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/close_button"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginStart="32dp"
            android:background="@drawable/rounded_button_error"
            android:drawableStart="@drawable/ic_baseline_close_24"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/confirm_cancel"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_button"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/ic_baseline_check_24"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/confirm_confirm"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>